--- a/App_test/gui_test/src/main/java/org/fazioMonchieri/view/ElettoreView.fxml
+++ b/App_test/gui_test/src/main/java/org/fazioMonchieri/view/ElettoreView.fxml
@@ -11,7 +11,7 @@
 
 <GridPane alignment="CENTER" hgap="10" style="-fx-background-color: #0066cc;" vgap="10" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fazioMonchieri.controllers.HomeController">
    <children>
-      <Button onMouseClicked="#userLogin" prefHeight="100.0" prefWidth="200.0" stylesheets="@style/HomeStyle.css" text="User" GridPane.rowIndex="1">
+      <Button onAction="#register" prefHeight="100.0" prefWidth="200.0" stylesheets="@style/HomeStyle.css" text="User" GridPane.rowIndex="1">
          <font>
             <Font size="20.0" />
          </font>
@@ -19,7 +19,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </Button>
-      <Button onAction="#sessionLogin" prefHeight="100.0" prefWidth="200.0" stylesheets="@style/HomeStyle.css" text="Session" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <Button onAction="#login" prefHeight="100.0" prefWidth="200.0" stylesheets="@style/HomeStyle.css" text="Session" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <font>
             <Font size="20.0" />
          </font>
