--- a/App_test/gui_test/src/main/java/org/fazioMonchieri/view/LoginSessionView.fxml
+++ b/App_test/gui_test/src/main/java/org/fazioMonchieri/view/LoginSessionView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -15,9 +14,9 @@
 
 <BorderPane style="-fx-background-color: #0066cc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.ControllerAuth">
    <top>
-      <Label text="Autenticazione" textFill="WHITE" BorderPane.alignment="CENTER">
+      <Label text="Apri sessione in locale" textFill="WHITE" BorderPane.alignment="CENTER">
          <font>
-            <Font name="Arial Bold" size="28.0" />
+            <Font name="Arial" size="28.0" />
          </font>
          <BorderPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -41,32 +40,18 @@
             </Label>
             <HBox>
                <children>
-                  <Label text="Accedi come" textFill="WHITE">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </HBox.margin>
-                  </Label>
-                  <ChoiceBox prefHeight="25.0" prefWidth="145.0">
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </HBox.margin>
-                  </ChoiceBox>
-               </children>
-            </HBox>
-            <HBox>
-               <children>
-                  <Label text="Codice Fiscale" textFill="WHITE">
+                  <Label alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="110.0" text="Id sessione" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="username" promptText="Codice Fiscale">
+                  <TextField fx:id="username" promptText="ID Sessione">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
                   </TextField>
                </children>
                <opaqueInsets>
@@ -81,6 +66,9 @@
                      </font>
                   </Label>
                   <PasswordField fx:id="password" promptText="Password">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
@@ -103,10 +91,13 @@
       </VBox>
    </center>
    <bottom>
-      <Button fx:id="loginButton" mnemonicParsing="false" onAction="#handleButtonLog" text="Login" translateY="-10.0" BorderPane.alignment="CENTER">
+      <Button fx:id="loginButton" mnemonicParsing="false" onAction="#handleButtonLog" stylesheets="@style/HomeStyle.css" text="Login" translateY="-10.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets />
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </BorderPane.margin>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </Button>
    </bottom>
 </BorderPane>
